had to correct hover font color for visibility needs

--- a/src/App.css
+++ b/src/App.css
@@ -438,7 +438,7 @@ h4.city:hover {
   margin-bottom: 6%;
   overflow: hidden;
   font-size: 0.8em;
-  color: darkslategray;
+  color: white;
   padding: 10% 10% 10% 10%;
   font-weight: bold;
 }
